Finalized the updates on the landing page and the leaderboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Solitaire Leaderboard</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <h1>Solitaire Leaderboard</h1>
-        <p>Play the classic Solitaire anytime, anywhere.</p>
-        <a href="https://apps.apple.com/us/app/solitaire/id359917414">Download on App Store</a>
-        <a href="https://play.google.com/store/apps/details?id=com.mobilityware.solitaire&hl=en&pli=1">Download on Play Store</a>
-        <nav>
-            <a href="leaderboard.html">Leaderboard</a>
-            <a href="add_score.html">Add Score</a>
-        </nav>
-    </body>
+<html>
+<head>
+    <title>Ultimate Solitaire</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+
+<header>
+    <h1>Ultimate Solitaire</h1>
+    <nav>
+        <a href="leaderboard.html">Leaderboard</a>
+        <a href="add_score.html">Add Score</a>
+    </nav>
+</header>
+
+<div class="container">
+    <div class="card">
+        <h2>Classic Solitaire, Modern Experience</h2>
+        <p>Play Solitaire on your phone and compete globally.</p>
+
+        <div class="store-links">
+            <a href="https://apps.apple.com/us/app/solitaire/id359917414"> App Store</a>
+            <a href="https://play.google.com/store/apps/details?id=com.mobilityware.solitaire&pcampaignid=web_share"> Google Play</a>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
