--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Leaderboard</title>
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="js/api.js"></script>
-        <script defer src="js/leaderboard.js"></script>
-    </head>
-    <body>
-        <h2>Leaderboard</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Score</th>
-                    <th>Duration(sec)</th>
-                </tr>
-            </thead>
-            <tbody id="scores"></tbody>
-        </table>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Leaderboard</title>
+
+ 
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script defer src="./js/api.js"></script>
+    <script defer src="./js/leaderboard.js"></script>
+</head>
+<body>
+
+<header>
+    <h1>Leaderboard</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="add_score.html">Add Score</a>
+    </nav>
+</header>
+
+<div class="container">
+    <div class="card">
+        <h2>Top Players</h2>
+
+        <div class="table-wrapper">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Player</th>
+                        <th>Score</th>
+                        <th>Duration (s)</th>
+                    </tr>
+                </thead>
+                <tbody id="scores">
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
